Ensure first alignment row is right-justified

--- a/www/viz-styles.css
+++ b/www/viz-styles.css
@@ -13,6 +13,11 @@
   display: flex;
 }
 
+.alignment-row:first-of-type {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .match {
   background-color:black;
 }
